register and login

--- a/busticket/src/main/resources/templates/home.html
+++ b/busticket/src/main/resources/templates/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/main-style.css">
+    <link th:href="@{/css/main-style.css}" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
     </nav>
     <section>
         <div class="box-img">
-            <img src="/8434888.jpg" alt="">
+            <img src="/images/buss.jpg" alt="">
         </div>
     </section>
 </body>
