--- a/busticket/src/main/resources/templates/login.html
+++ b/busticket/src/main/resources/templates/login.html
@@ -4,29 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../static/main-style.css">
-    <link rel="stylesheet" href="../static/login-style.css">
+    <link th:href="@{/css/main-style.css}" rel="stylesheet">
+    <link th:href="@{/css/login-style.css}" rel="stylesheet">
     <title>Login</title>
 </head>
 <body>
     <nav class="nav-bar">
         <ul>
             <li><h1>BusTicket</h1></li>
-            <li><a href="login.html"><p>Login</p></a></li>
-            <li><a href="cadastrar.html"><p>Cadastrar</p></a></li>
+            <li><a href="/login"><p>Login</p></a></li>
+            <li><a href="/cadastrar"><p>Cadastrar</p></a></li>
         </ul>
     </nav>
     <section>
         <div class="container">
         <div class="login">
             <h1>Login</h1>
-            <form action="login" method="post">
+            <form id="loginForm">
                 <input type="text" name="email" placeholder="Email">
                 <input type="password" name="password" placeholder="Senha">
+                <input type="hidden" name="role" value="user">
                 <button type="submit">Entrar</button>
-                <div><a href="/cadastrar.html">Cadastra-se</a></div>
+                <div><a href="/register">Cadastra-se</a></div>
             </form>
         </div>
     </section>
+    <script th:src="@{/js/login.js}"></script>
 </body>
 </html>
