--- a/busticket/src/main/resources/templates/login.html
+++ b/busticket/src/main/resources/templates/login.html
@@ -21,8 +21,8 @@
         <div class="login">
             <h1>Login</h1>
             <form id="loginForm">
-                <input type="text" name="email" placeholder="Email">
-                <input type="password" name="password" placeholder="Senha">
+                <input type="text" name="email" id="email" placeholder="Email">
+                <input type="password" name="password" id="password" placeholder="Senha">
                 <input type="hidden" name="role" value="user">
                 <button type="submit">Entrar</button>
                 <div><a href="/register">Cadastra-se</a></div>
