--- a/busticket/src/main/resources/templates/login.html
+++ b/busticket/src/main/resources/templates/login.html
@@ -20,7 +20,7 @@
         <div class="container">
         <div class="login">
             <h1>Login</h1>
-            <form id="loginForm">
+            <form id="form">
                 <input type="text" name="email" id="email" placeholder="Email">
                 <input type="password" name="password" id="password" placeholder="Senha">
                 <input type="hidden" name="role" value="user">
