--- a/busticket/src/main/resources/templates/main.html
+++ b/busticket/src/main/resources/templates/main.html
@@ -23,7 +23,7 @@
 
     </section>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-   <script th:src="@{/js/token.js}"></script>
+   <script th:src="@{/js/token.js}/"></script>
    
 </body>
 </html>
