--- a/busticket/src/main/resources/templates/main.html
+++ b/busticket/src/main/resources/templates/main.html
@@ -11,7 +11,7 @@
         <nav class="nav-bar">
             <ul>
                 <li><h1>BusTicket</h1></li>
-                <li><a href=""><p>Home</p></a></li>
+                <li><a href=""><p>Viagens</p></a></li>
                 <li><a href=""><p>Reservas</p></a></li>
                 <li><a href=""><p>Meus Pedidos</p></a></li>
                 <li><a href=""><p>logout</p></a></li>
@@ -23,7 +23,7 @@
 
     </section>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-   <script th:src="@{/js/token.js}/"></script>
+   <script th:src="@{/js/token.js}"></script>
    
 </body>
 </html>
